--- a/styles/36_americas_cup.css
+++ b/styles/36_americas_cup.css
@@ -14,8 +14,7 @@ header
 h1    /* Style à appliquer sur les titres h1 */
 {
   text-align: center;
-  /*color: #0A6FB0; */
-  color: red;
+  color: #0A6FB0;
   letter-spacing: 0.5em;
 }
 h2     /* Style à appliquer sur les sous-titres h2 */
@@ -75,8 +74,8 @@ a:visited
 }
 a:hover
 {
-  color: blue;
-  background: white;
+  color: white;
+  background: blue;
 }
 a:active
 {
